--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
     <p>
      © 2023 Gyanasthali High School Sampathak Bairiya. All rights reserved.
     </p>
+    <b>Designed & Developed by Gautam Spirit, Laxman Krishnamurti</b>
    </div>
   </footer>
  </body>
