--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   </section>
   <!-- Footer -->
   <footer class="bg-blue-600 text-white py-4">
-   <div class="container mx-auto text-center">
+   <div class="container mx-auto text-center flex gap-4">
     <p>
      © 2023 Gyanasthali High School Sampathak Bairiya. All rights reserved.
     </p>
